src/test/resources/regression/frontends/error/simple/LiteralBigInt.scala
/* Copyright 2009-2016 EPFL, Lausanne */

object LiteralBigInt {

  def safeInt(x: Int): BigInt = BigInt(x)

}
